trident/infra/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trident-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: trident.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: trident-backend
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trident-frontend
                port:
                  number: 80
